[gd_scene load_steps=3 format=3 uid="uid://hj2lpyqj83kb"]

[ext_resource type="Script" path="res://scenes/game/levels/choice/choice_script.gd" id="1_4imp8"]

[sub_resource type="LabelSettings" id="LabelSettings_du4hk"]

[node name="Node2D2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4imp8")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -118.5
offset_top = -63.5
offset_right = 118.5
offset_bottom = 63.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 30

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(900, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 100

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button3" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Time_to_choice" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Время до конца голосования"
label_settings = SubResource("LabelSettings_du4hk")

[node name="Player_to_kick" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
label_settings = SubResource("LabelSettings_du4hk")

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Пропустить голосование"

[node name="Show_kick_timer" type="Timer" parent="."]
one_shot = true

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Show_kick_timer" to="." method="_on_show_kick_timer_timeout"]
